WIP: changes to ExcelizeService before pulling